# blog-api

./: .env.example  .gitignore  manage.py  pyproject.toml
apps/abstracts/: apps.py  decorators.py  models.py
apps/blogs/: models.py  serializer.py  serializers.py  urls.py  views.py
apps/blogs/migrations/: 0001_initial.py  0002_alter_post_category_alter_post_tags.py
apps/blogs/serializers/: category.py  comment.py  post.py  tag.py
apps/blogs/views/: category.py  post.py  tag.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
settings/: asgi.py  base.py  conf.py  settings.py  urls.py  wsgi.py
settings/env/: local.py  prod.py
